# qubes-app-linux-converter

./: .gitignore  Cargo.toml  Makefile  Makefile.builder  PKGBUILD  README.md  build_dev.sh  insanity_packaging_generator.sh  list_mimetype.sh  qvm-convert.desktop  qvm-convert.gnome  qvm_convert_nautilus.py  readme.md  release.sh  run_tests.sh  simple_server_test.sh
archlinux/: PKGBUILD  qubes-app-linux-converter-client-0.1.0-1-x86_64.pkg.tar.zst  qubes-app-linux-converter-server-0.1.0-1-x86_64.pkg.tar.zst
cli/: Cargo.toml
cli/.rpm/: qubes-converter-client-cli.spec
cli/src/: main.rs
client/: Cargo.toml
client/cli/: Cargo.toml
client/cli/src/: main.rs
client/core/: Cargo.toml  build-dev.sh
client/core/src/: lib.rs
client/gtk/: Cargo.toml  window.glade  window.glade~
client/gtk/src/: main.rs
client/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
gtk/: Cargo.toml
gtk/.rpm/: qubes-converter-client-gtk.spec
gtk/gtk_ui/: parameters_selection.ui
gtk/src/: main.rs
gtk_ui/: convert_status_progress.ui  parameters_selection.ui  parameters_selection.ui.back  parameters_selection.ui~
rpm_spec/: converter-dom0.spec.in  dom0.spec.in  vm.spec.in
server/: Cargo.toml
server/.rpm/: qubes-converter-server.spec
server/src/: main.rs
src/: cli.rs  client_core.rs  common.rs  gtk.rs  server.rs
