[package]
name = "qubes-app-linux-converter"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]
edition = "2018"
description = "Qubes application - Convert untrusted files to trustable files"
license = "GPL-3.0"
readme = "readme.md"
repository = "https://github.com/neowutran/qubes-app-linux-converter"
keywords = ["qubes","QubesOS"]

[[bin]]
name = "gtk"
path = "src/gtk.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# TODO once https://github.com/rust-lang/cargo/issues/1982 have been fixed,
# specify dependencies for each binary
[dependencies]

# Common
log = "0"
env_logger = "0"
uuid = {version = "0",  features = ["v4"]}

# Server
tree_magic = "0"
mime = "0"

# GUI
gtk = {version="0", features = ["v3_24_9"]}
glib = "0"
gio = "0"

# Core
home = "0"

# Cli
clap = "3.0.0-beta.2"

[dev-dependencies]
glob = "0"
