[package]
name = "qubes-converter"
version = "0.1.0"
authors = ["Neowutran <qubes@neowutran.ovh>"]
edition = "2018"
description = "Qubes application - Convert untrusted files to trustable files"
license = "GPL-3.0"
readme = "readme.md"
repository = "https://github.com/neowutran/qubes-app-linux-converter"
keywords = ["qubes","QubesOS","converter"]
categories = ["QubesOS"]

[[bin]]
name = "qubes-converter-client-gtk"
path = "src/gtk.rs"

[[bin]]
name = "qubes-converter-client-cli"
path = "src/cli.rs"

[[bin]]
name = "qubes-converter-server"
path = "src/server.rs"

# TODO once https://github.com/rust-lang/cargo/issues/1982 have been fixed,
# specify dependencies for each binary
[dependencies]

# Common
log = "0"
env_logger = "0"
uuid = {version = "0",  features = ["v4"]}
image = "0"
clap = "3.0.0-beta.2"

# Server
tree_magic = "0"
mime = "0"

# Core
home = "0"

# Cli
tui = {version = "0", features = ["crossterm"]}
crossterm = "0"
glob = "0"

# GUI
# TODO, before this software reach any "releasable" state:
# - Stop using "git" dependencies
# - Stop using "beta" dependencies
[dependencies.gdk]
default-features = false
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gdk4"
[dependencies.gtk] 
default-features = false
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gtk-macros]
default-features = false
version = "0.3.0"

[dependencies.gio]
default-features = false
git = "https://github.com/gtk-rs/gtk-rs-core"
features = ["v2_60"]

[dependencies.glib]
default-features = false
git = "https://github.com/gtk-rs/gtk-rs-core"
features = ["v2_60"]

