[package]
name = "qubes-app-linux-converter-server"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]
edition = "2018"
description = "Qubes application - Convert untrusted files to trustable files"
license = "GPL-3.0"
readme = "readme.md"
repository = "https://github.com/neowutran/qubes-app-linux-converter"
keywords = ["qubes","QubesOS"]

[dependencies]
tree_magic = "0"
mime = "0"
qubes-app-linux-converter-common = { path = "../common" }
log = "0"
env_logger = "0"
uuid = {version = "0",  features = ["v4"]}

