[package]
name = "qubes-app-linux-converter-client-cli"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
qubes-app-linux-converter-client-core = { path = "../core" }
qubes-app-linux-converter-common = { path = "../../common" }
log = "0"
env_logger = "0"
