[package]
name = "qubes-app-linux-converter-client-gtk"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]
edition = "2018"

[dependencies]
gtk = {version="0", features = ["v3_24_9"]}
glib = "0"
gio = "0"
qubes-app-linux-converter-client-core = { path = "../core" }
qubes-app-linux-converter-common = { path = "../../common" }
log = "0"
env_logger = "0"

# TODO: switch to GTK4 before this thing can be released.
# TODO: Sorry future-myself, you will have to rewrite the UI file
#[dependencies.gtk]
#git = "https://github.com/gtk-rs/gtk4-rs"
#package ="gtk4"
#[dependencies.gdk]
#git = "https://github.com/gtk-rs/gtk4-rs"
#package = "gdk4"
#[dependencies.glib] 
#git = "https://github.com/gtk-rs/gtk-rs-core"
#[dependencies.gio]
#git = "https://github.com/gtk-rs/gtk-rs-core"
